--- a/.github/workflows/packer.yaml
+++ b/.github/workflows/packer.yaml
@@ -70,6 +70,6 @@ jobs:
           echo "AMI_ID: ${{ needs.packer_build.outputs.ami_id }}"
           cd ${{ github.event.repository.name }}/terraform
           terraform init
-          terraform plan -var="ami_id=ami-0d02f4dc282064d6a
-          terraform apply -var="ami_id=ami-0d02f4dc282064d6a -auto-approve"
+          terraform plan -var="ami_id=ami-0d02f4dc282064d6a"
+          terraform apply -var="ami_id=ami-0d02f4dc282064d6a" -auto-approve
 
