--- a/.github/workflows/packer.yaml
+++ b/.github/workflows/packer.yaml
@@ -66,6 +66,9 @@ jobs:
           cd ${{ github.event.repository.name }}
 
       - name: test
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
           echo "AMI_ID: ${{ needs.packer_build.outputs.ami_id }}"
           cd ${{ github.event.repository.name }}/terraform
