--- a/.github/workflows/packer.yaml
+++ b/.github/workflows/packer.yaml
@@ -77,7 +77,7 @@ jobs:
 
           aws sts get-caller-identity --region=us-east-1
 
-          terraform init
-          terraform plan -var="ami_id=ami-0d02f4dc282064d6a"
-          terraform apply -var="ami_id=ami-0d02f4dc282064d6a" -auto-approve
+          # terraform init
+          # terraform plan -var="ami_id=ami-0d02f4dc282064d6a"
+          # terraform apply -var="ami_id=ami-0d02f4dc282064d6a" -auto-approve
 
