--- a/.github/workflows/packer.yaml
+++ b/.github/workflows/packer.yaml
@@ -72,12 +72,10 @@ jobs:
         run: |
           echo "AMI_ID: ${{ needs.packer_build.outputs.ami_id }}"
           cd ${{ github.event.repository.name }}/terraform
-          echo "*$AWS_ACCESS_KEY_ID*"
-          echo $AWS_SECRET_ACCESS_KEY
 
           aws sts get-caller-identity --region=us-east-1
 
-          # terraform init
-          # terraform plan -var="ami_id=ami-0d02f4dc282064d6a"
-          # terraform apply -var="ami_id=ami-0d02f4dc282064d6a" -auto-approve
+          terraform init
+          terraform plan -var="ami_id=ami-0d02f4dc282064d6a"
+          terraform apply -var="ami_id=ami-0d02f4dc282064d6a" -auto-approve
 
