--- a/.github/workflows/packer.yaml
+++ b/.github/workflows/packer.yaml
@@ -43,7 +43,7 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: us-east-1
+          # AWS_DEFAULT_REGION: us-east-1
           AMI_NAME: default_webserver
         run: |
           aws ec2 describe-images --owners self  \
