splitted packer's steps

--- a/.github/workflows/packer.yaml
+++ b/.github/workflows/packer.yaml
@@ -1,4 +1,4 @@
-name: Build AMI with Packer
+name: Deploy
 
 on:
   push:
@@ -8,9 +8,14 @@ on:
 
 jobs:
   packer_build:
-    name: Packer Build
+    name: AMI build with Packer
     runs-on: ubuntu-latest
     environment: dev
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_DEFAULT_REGION: us-east-1
+      AMI_NAME: default_webserver
 
     outputs:
       ami_id: ${{ steps.build.outputs.ami_id }}
@@ -37,14 +42,7 @@ jobs:
       #TODO: добавить возможность пропуска, хз вручную как то, апровы или что еще, придумать короче
         # wokrlfow dipstach с входными параметрами
 
-      - name: build
-        id: build
-        # if: steps.changes.outcome != 'success'
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: us-east-1
-          AMI_NAME: default_webserver
+      - name: deregister previous AMI
         run: |
           image_info=$(aws ec2 describe-images --owners self  \
             --filters Name=name,Values=$AMI_NAME \
@@ -63,7 +61,10 @@ jobs:
               echo "snapshot $snapshot_id deleted"
             fi
           fi
-          # TODO: степ разделить тут
+
+      - name: build
+        id: build
+        run: |
           cd ${{ github.event.repository.name }}
           cd packer
           packer init .
@@ -99,4 +100,3 @@ jobs:
           terraform init
           terraform plan -var="ami_id=ami-0d02f4dc282064d6a"
           # terraform apply -var="ami_id=ami-0d02f4dc282064d6a" -auto-approve
-
