--- a/.github/workflows/packer.yaml
+++ b/.github/workflows/packer.yaml
@@ -15,7 +15,7 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_DEFAULT_REGION: us-east-1
-      AMI_NAME: default_webserver
+      AMI_NAME: amazon-linux-sandbox
 
     outputs:
       ami_id: ${{ steps.build.outputs.ami_id }}
