--- a/.github/workflows/packer.yaml
+++ b/.github/workflows/packer.yaml
@@ -28,7 +28,8 @@ jobs:
           pwd
           ls -lah
           cd ${{ github.event.repository.name }}
-          cat sample.yaml | yq .git 
+          cat samples.yaml
+          cat sample.yaml | yq .
 
       # - name: Check for Packer changes
       #   id: changes
