--- a/.github/workflows/packer.yaml
+++ b/.github/workflows/packer.yaml
@@ -10,12 +10,12 @@ jobs:
   packer_build:
     name: AMI build with Packer
     runs-on: ubuntu-latest
-    environment: dev
+    environment: tmp
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_DEFAULT_REGION: us-east-1
-      AMI_NAME: amazon-linux-sandbox
+      AMI_NAME: default_webserver_snapshot # amazon-linux-sandbox
 
     outputs:
       ami_id: ${{ steps.build.outputs.ami_id }}
@@ -28,8 +28,6 @@ jobs:
           pwd
           ls -lah
           cd ${{ github.event.repository.name }}
-          cat sample.yaml
-          cat sample.yaml | yq .
 
       # - name: Check for Packer changes
       #   id: changes
@@ -51,7 +49,7 @@ jobs:
             --filters Name=name,Values=$AMI_NAME \
             --query 'Images[0].{ImageId: ImageId, SnapshotId: BlockDeviceMappings[0].Ebs.SnapshotId}')
 
-          # TODO: else лог
+          # TODO: else логирование
           if [ "$image_info" != "null" ]; then
             image_id=$(echo $image_info | jq -r '.ImageId')
             snapshot_id=$(echo $image_info| jq -r '.SnapshotId')
@@ -80,7 +78,7 @@ jobs:
   terraform_deploy:
     name: Terraform Deploy
     runs-on: ubuntu-latest
-    environment: dev
+    environment: tmp
     needs: packer_build
 
     steps:
@@ -103,5 +101,5 @@ jobs:
           aws sts get-caller-identity --region=us-east-1
 
           terraform init
-          terraform plan -var="ami_id=ami-0d02f4dc282064d6a"
-          # terraform apply -var="ami_id=ami-0d02f4dc282064d6a" -auto-approve
+          terraform plan -var="ami_id=${{ needs.packer_build.outputs.ami_id }}"
+          terraform apply -var="ami_id=${{ needs.packer_build.outputs.ami_id }}" -auto-approve
